部件压印，第一阶段任务和其他

--- a/src/config/JustEnoughCharacters.cfg
+++ b/src/config/JustEnoughCharacters.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.12.0-3.3.0
+~CONFIG_VERSION: 1.12.0-3.4.5
 
 fuzzy {
     # Set to true to enable fuzzy Ang <=> An
@@ -39,8 +39,8 @@ general {
     # Set to false to disable JEI support.
     B:EnableJei=true
 
-    # Set to true to enable radical mode. Keep in mind this is DANGEROUS.
-    # This could support more mods but could lead to some strange behavior as well.
+    # Set to false to disable PSI support.
+    B:EnablePsi=true
     B:EnableRadicalMode=false
 
     # Choose keyboard: 0 for quanpin, 1 for phonetic (Daqian)
@@ -58,41 +58,12 @@ transform {
     # This list will also contain data fetched from online record.
     S:ListAdditionalRegexp <
         com.latmod.mods.projectex.gui.GuiTableBase:updateValidItemList
-        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerFluidStack:lambda$getInstanceFilterPredicate$1
-        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerFluidStack:lambda$getInstanceFilterPredicate$4
-        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$getInstanceFilterPredicate$1
-        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$getInstanceFilterPredicate$6
-        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$null$2
-        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$null$4
      >
 
     # Give a list of methods to transform, of which uses "String.contains" to match.
     # The format is "full.class.Path$InnerClass:methodName"
     # This list will also contain data fetched from online record.
     S:ListAdditionalString <
-        appeng.client.gui.implementations.GuiInterfaceTerminal:itemStackMatchesSearchTerm
-        appeng.client.gui.implementations.GuiInterfaceTerminal:refreshList
-        betterquesting.api2.client.gui.panels.lists.CanvasEntityDatabase:queryMatches
-        betterquesting.api2.client.gui.panels.lists.CanvasFileDirectory:queryMatches
-        betterquesting.api2.client.gui.panels.lists.CanvasFluidDatabase:queryMatches
-        betterquesting.api2.client.gui.panels.lists.CanvasItemDatabase:queryMatches
-        betterquesting.api2.client.gui.panels.lists.CanvasQuestDatabase:queryMatches
-        com.feed_the_beast.ftblib.lib.gui.misc.GuiButtonListBase$1:add
-        com.feed_the_beast.ftblib.lib.gui.misc.GuiSelectItemStack$ItemStackButton:shouldAdd
-        com.latmod.mods.projectex.gui.GuiTableBase:updateValidItemList
-        com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterMod:test
-        com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterOreDict:lambda$test$0
-        logisticspipes.gui.orderer.GuiOrderer:isSearched
-        logisticspipes.gui.orderer.GuiRequestTable:isSearched
-        me.towdium.jecalculation.utils.Utilities$I18n:contains
-        mrriegel.storagenetwork.gui.GuiContainerStorageInventory:doesStackMatchSearch
-        mrriegel.storagenetwork.gui.fb.GuiFastNetworkCrafter:doesStackMatchSearch
-        net.blay09.mods.farmingforblockheads.container.ContainerMarketClient:applyFilters
-        sonar.logistics.core.items.guide.GuiGuide:updateSearchList
-        sonar.logistics.core.items.wirelessstoragereader.GuiWirelessStorageReader:getGridList
-        sonar.logistics.core.tiles.readers.fluids.GuiFluidReader:getGridList
-        sonar.logistics.core.tiles.readers.items.GuiInventoryReader:getGridList
-        us.getfluxed.controlsearch.client.gui.GuiNewControls:refreshKeys
      >
 
     # Give a list of methods to transform, of which uses Kotlin Strings to match.
@@ -110,6 +81,7 @@ transform {
     # Default list of methods to transform, of which uses regular expression to match.
     # This list is maintained by the mod and will have no effect if you change it.
     S:ListDefaultRegexp <
+        appeng.client.me.FluidRepo:updateView
         appeng.client.me.ItemRepo:updateView
         codechicken.nei.ItemList$PatternItemFilter:matches
         codechicken.nei.util.ItemList$PatternItemFilter:matches
@@ -117,6 +89,12 @@ transform {
         org.cyclops.integrateddynamics.inventory.container.ContainerLogicProgrammerBase$1:apply
         p455w0rd.wct.client.me.ItemRepo:updateView
         vazkii.quark.client.feature.ChestSearchBar:lambda$namesMatch$2
+        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerFluidStack:lambda$getInstanceFilterPredicate$1
+        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerFluidStack:lambda$getInstanceFilterPredicate$4
+        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$getInstanceFilterPredicate$1
+        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$getInstanceFilterPredicate$6
+        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$null$2
+        org.cyclops.integratedterminals.capability.ingredient.IngredientComponentTerminalStorageHandlerItemStack:lambda$null$4
      >
 
     # Default list of methods to transform, of which uses "String.contains" to match.
@@ -125,7 +103,9 @@ transform {
         mezz.jei.ItemFilter$FilterPredicate:stringContainsTokens
         com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterName:accepts
         com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterTooltip:accepts
+        com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterMod:test
         com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterName:test
+        com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterOreDict:lambda$test$0
         com.raoulvdberge.refinedstorage.gui.grid.filtering.GridFilterTooltip:test
         com.rwtema.extrautils2.transfernodes.TileIndexer$ContainerIndexer$WidgetItemRefButton:lambda$getRef$0
         crazypants.enderio.machine.invpanel.client.ItemFilter$ModFilter:matches
@@ -141,6 +121,8 @@ transform {
         bmp:updateFilteredItems
         appeng.client.gui.implementation.GuiInterfaceTerminal:refreshList
         appeng.client.gui.implementation.GuiInterfaceTerminal:itemStackMatchesSearchTerm
+        appeng.client.gui.implementations.GuiInterfaceTerminal:refreshList
+        appeng.client.gui.implementations.GuiInterfaceTerminal:itemStackMatchesSearchTerm
         pers.towdium.just_enough_calculation.gui.guis.GuiPicker:updateLayout
         io.github.elytra.correlated.inventory.ContainerTerminal:updateSlots
         com.elytradev.correlated.inventory.ContainerTerminal:updateSlots
@@ -148,6 +130,10 @@ transform {
         sonar.logistics.client.gui.GuiGuide:updateSearchList
         sonar.logistics.client.gui.GuiInventoryReader:getGridList
         sonar.logistics.client.gui.GuiWirelessStorageReader:getGridList
+        sonar.logistics.core.tiles.readers.fluids.GuiFluidReader:getGridList
+        sonar.logistics.core.tiles.readers.items.GuiInventoryReader:getGridList
+        sonar.logistics.core.items.wirelessstoragereader.GuiWirelessStorageReader:getGridList
+        sonar.logistics.core.items.guide.GuiGuide:updateSearchList
         binnie.core.machines.storage.SearchDialog:updateSearch
         net.blay09.mods.cookingforblockheads.container.ContainerRecipeBook:search
         mcjty.rftools.blocks.storagemonitor.GuiStorageScanner:updateContentsList
@@ -170,6 +156,11 @@ transform {
         betterquesting.client.gui.editors.json.GuiJsonEntitySelection:updateSearch
         betterquesting.client.gui.editors.json.GuiJsonFluidSelection:doSearch
         betterquesting.client.gui.editors.json.GuiJsonItemSelection:doSearch
+        betterquesting.api2.client.gui.panels.lists.CanvasEntityDatabase:queryMatches
+        betterquesting.api2.client.gui.panels.lists.CanvasFileDirectory:queryMatches
+        betterquesting.api2.client.gui.panels.lists.CanvasFluidDatabase:queryMatches
+        betterquesting.api2.client.gui.panels.lists.CanvasItemDatabase:queryMatches
+        betterquesting.api2.client.gui.panels.lists.CanvasQuestDatabase:queryMatches
         com.elytradev.correlated.C28n:contains
         vswe.stevesfactory.components.ComponentMenuContainer$2:updateSearch
         vswe.stevesfactory.components.ComponentMenuFluid:updateSearch
@@ -177,6 +168,16 @@ transform {
         com.mia.props.client.container.GuiDecobench:refreshButtons
         mrriegel.storagenetwork.gui.GuiRequest:match
         vazkii.quark.client.feature.ChestSearchBar:lambda$namesMatch$0
+        logisticspipes.gui.orderer.GuiOrderer:isSearched
+        logisticspipes.gui.orderer.GuiRequestTable:isSearched
+        us.getfluxed.controlsearch.client.gui.GuiNewControls:refreshKeys
+        me.towdium.jecalculation.utils.Utilities$I18n:contains
+        net.blay09.mods.farmingforblockheads.container.ContainerMarketClient:applyFilters
+        mrriegel.storagenetwork.gui.GuiContainerStorageInventory:doesStackMatchSearch
+        mrriegel.storagenetwork.gui.fb.GuiFastNetworkCrafter:doesStackMatchSearch
+        com.feed_the_beast.ftblib.lib.gui.misc.GuiButtonListBase$1:add
+        com.feed_the_beast.ftblib.lib.gui.misc.GuiSelectItemStack$ItemStackButton:shouldAdd
+        com.latmod.mods.projectex.gui.GuiTableBase:updateValidItemList
      >
 
     # Default list of methods to transform, of which uses Kotlin Strings to match.
