--- a/src/config/i18n_update_mod.cfg
+++ b/src/config/i18n_update_mod.cfg
@@ -1,6 +1,8 @@
 # Configuration file
 
 i18n_mod {
+    # 是否将资源包设为最高优先级
+    B:优先加载资源包=true
 
     公告配置 {
         # 专为整合作者设计，你只需要提供一个纯网页版txt文件(必须是UTF-8格式编码！)链接，即可加载此公告
@@ -17,8 +19,11 @@ i18n_mod {
         # 用来自定义下载过程中小窗口的名字
         S:下载条名称=汉化资源包更新进度条
 
+        # 实验功能！
+        B:启用非阻塞安装=false
+
         # 默认开启，会在启动时将游戏语言强制设定为中文
-        B:是否开启强制中文功能=true
+        B:是否开启强制中文功能=false
 
         # 默认开启，关闭后此模组不再尝试检查、下载资源包、以及切换语言
         B:是否开启资源包下载功能=true
@@ -43,8 +48,6 @@ i18n_mod {
     按键配置 {
         # 为腐竹设计，防止玩家乱改按键导致问题
         B:是否关闭所有键位=false
-
-        # 最近有玩家反馈 JEI 兼容问题，临时关闭
         B:"是否开启 JEI 兼容"=false
 
         # 可能会有人想自定义
