中间版本小更新

--- a/src/config/tips.cfg
+++ b/src/config/tips.cfg
@@ -2,15 +2,16 @@
 
 general {
     # Determines whether or not the default tips should be possible. This includes tips added directly by other mods through their language files. [default: true]
-    B:allowDefaultTips=true
+    B:allowDefaultTips=false
 
     # A list of custom tips added by the user or modpack. [default: ]
     S:customTips <
     你可以使用剑将鱼切成生鱼片
-    Embers这个模组里的功能性方块几乎都需要漏斗来驱动
+    Embers模组中的功能性方块几乎都需要漏斗来驱动
+    Embers模组中的管道都需要红石信号才能使用
     记得节约用电！伙计
     似乎拿木棍来烧灰效果会更好一些
-    苦力怕也可以将废铁和铜罐头炸成粒
+    Creeper也可以将废铁和铜罐头炸成粒
     不 要 吃 金 枪 鱼 ！
     你最好在尖刺陷阱下方放一个漏斗
     一发光束炮就可以把怪物轰成灰烬(除了末影人)
@@ -18,7 +19,6 @@ general {
     你可以用桶捞鱼，然后倒到鱼缸里养
     河豚肉没有毒
     你的握力强大到可以把骨头握成骨粉
-    鲸鱼汉堡非常好吃
     漂流瓶里有很多名言
     灰烬能量喷发器发出的能量是灰烬能量发射器的10倍
     所有学科的尽头是哲学
