--- a/src/config/jei/bookmarks.ini
+++ b/src/config/jei/bookmarks.ini
@@ -1,7 +1,6 @@
-T:{id:"embers:dust_ash",Count:1b,Damage:0s}
-T:{id:"embers:crystal_ember",Count:1b,Damage:0s}
-T:{id:"embers:ember_cluster",Count:1b,Damage:0s}
-T:{id:"embers:ember_cartridge",Count:1b,tag:{emberCapacity:6000.0d,ember:0.0d},Damage:0s}
-T:{id:"embers:beam_cannon",Count:1b,Damage:0s}
-T:{id:"embers:ember_pulser",Count:1b,Damage:0s}
-T:{id:"embers:beam_splitter",Count:1b,Damage:0s}
+T:{id:"embers:pump",Count:1b,Damage:0s}
+T:{id:"embers:pipe",Count:1b,Damage:0s}
+T:{id:"embers:stamper_base",Count:1b,Damage:0s}
+T:{id:"embers:stamper",Count:1b,Damage:0s}
+T:{id:"embers:block_furnace",Count:1b,Damage:0s}
+T:{id:"embers:mixer",Count:1b,Damage:0s}
