--- a/src/config/jei/worldSettings.cfg
+++ b/src/config/jei/worldSettings.cfg
@@ -3,17 +3,10 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-227256701 {
-    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
-
-    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=true
-
-    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
     S:filterText=huij
-
-    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
@@ -23,6 +16,21 @@ world-804704861 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1084009780 {
+    B:bookmarkOverlayEnabled=true
+
+    # 给予物品而非显示其配方。
+    B:cheatItemsEnabled=false
+
+    # 在列表中点击物品以隐藏或取消隐藏。
+    B:editEnabled=false
+    S:filterText=liuti
+
+    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
@@ -42,10 +50,10 @@ world1544976906 {
 
 
 world2390489 {
-    B:bookmarkOverlayEnabled=true
+    B:bookmarkOverlayEnabled=false
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=huij
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -64,6 +72,15 @@ world649643875 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=mingl
+    B:overlayEnabled=true
+}
+
+
+world649718 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
