--- a/src/config/jei/worldSettings.cfg
+++ b/src/config/jei/worldSettings.cfg
@@ -54,14 +54,14 @@ world1628000574 {
 
 world2390489 {
     # 在打开的 GUI 一侧显示书签列表。
-    B:bookmarkOverlayEnabled=false
+    B:bookmarkOverlayEnabled=true
 
     # 给予物品而非显示其配方。
     B:cheatItemsEnabled=true
 
     # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@modular
+    S:filterText=shenhai
 
     # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
