--- a/src/config/randompatches.cfg
+++ b/src/config/randompatches.cfg
@@ -110,7 +110,7 @@ client {
 
         # The Minecraft window title.
         # Default: Minecraft 1.12.2
-        S:title=ET-Mariphilia-v0.2.1b
+        S:title=ET-Mariphilia-v0.2.2b
     }
 
 }
@@ -123,6 +123,11 @@ client {
 ##########################################################################################################
 
 misc {
+    # Whether to prevent the observer from emitting a signal when it is placed.
+    # This fixes MC-109832.
+    # Default: true
+    B:disableObserverSignalOnPlace=true
+
     # Fixes the End portal and End gateway break particle textures and improves End portal rendering.
     # Default: true
     B:endPortalTweaks=true
