--- a/src/config/researchtable.cfg
+++ b/src/config/researchtable.cfg
@@ -3,6 +3,7 @@
 general {
     I:GuiDetailWidth=150
     I:GuiHeight=170
+    B:GuiListAutoWidth=true
     I:GuiListWidth=120
     B:HideCompletedResearch=false
     B:HideUnavailableResearch=false
