--- a/ET-Mariphilia/minecraft/config/researchtable.cfg
+++ b/ET-Mariphilia/minecraft/config/researchtable.cfg
@@ -2,6 +2,7 @@
 
 general {
     I:GuiDetailWidth=150
+    B:GuiFullScreen=true
     I:GuiHeight=170
     B:GuiListAutoWidth=true
     I:GuiListWidth=120
