版本号更迭

--- a/ET-Mariphilia/minecraft/config/randompatches.cfg
+++ b/ET-Mariphilia/minecraft/config/randompatches.cfg
@@ -110,7 +110,7 @@ client {
 
         # The Minecraft window title.
         # Default: Minecraft 1.12.2
-        S:title=ET-Mariphilia-v0.3.0b-snapshot-4-2
+        S:title=ET-Mariphilia-v1.0.0b
     }
 
 }
