一些命名规范

--- a/ET-Mariphilia/manifest.json
+++ b/ET-Mariphilia/manifest.json
@@ -10,7 +10,7 @@
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "ET-Mariphilia",
+  "name": "Mariphilia",
   "author": "dong031001",
   "files": [
     {
