--- a/ET-Mariphilia/manifest.json
+++ b/ET-Mariphilia/manifest.json
@@ -567,6 +567,11 @@
       "projectID": 283644,
       "fileID": 2694382,
       "required": true
+    },
+    {
+      "projectID": 297878,
+      "fileID": 3065647,
+      "required": true
     }
   ],
   "overrides": "src"
