小报错修复

--- a/ET-Mariphilia/instance.cfg
+++ b/ET-Mariphilia/instance.cfg
@@ -1,20 +1,37 @@
+AutoCloseConsole=false
 ForgeVersion=
 InstanceType=OneSix
 IntendedVersion=
+JavaPath=javaw
+JvmArgs=
 LWJGLVersion=
+LaunchMaximized=false
 LiteloaderVersion=
 LogPrePostOutput=true
 MCLaunchMethod=LauncherPart
+MaxMemAlloc=12000
+MinMemAlloc=512
+MinecraftWinHeight=900
+MinecraftWinWidth=1600
 OverrideCommands=false
 OverrideConsole=false
+OverrideJava=false
 OverrideJavaArgs=false
 OverrideJavaLocation=false
 OverrideMCLaunchMethod=false
 OverrideMemory=false
 OverrideNativeWorkarounds=false
 OverrideWindow=false
+PermGen=128
+PostExitCommand=
+PreLaunchCommand=
+ShowConsole=false
+ShowConsoleOnError=true
+UseNativeGLFW=false
+UseNativeOpenAL=false
+WrapperCommand=
 iconKey=ETM-LIGHT-2-200x200
-lastLaunchTime=1611301685166
+lastLaunchTime=1611303235122
 name=Mariphilia-1.0.0
 notes=
-totalTimePlayed=52744
+totalTimePlayed=53022
