--- a/ET-Mariphilia/minecraft/config/tips.cfg
+++ b/ET-Mariphilia/minecraft/config/tips.cfg
@@ -13,19 +13,14 @@ general {
     Creeper也可以将废铁和铜罐头炸成粒
     不 要 吃 金 枪 鱼 ！
     你最好在尖刺陷阱下方放一个漏斗
-    一发光束炮就可以把怪物轰成灰烬(除了末影人)
-    在普通模式里你可以把船烧掉来做一个滤网
-    你可以用桶捞鱼，然后倒到鱼缸里养
-    河豚肉没有毒
+    一发光束炮就可以把怪物轰成灰烬
     你的握力强大到可以把骨头握成骨粉
-    漂流瓶里有很多名言
     灰烬能量喷发器发出的能量是灰烬能量发射器的10倍
     所有学科的尽头是哲学
     你在树苗旁边跳舞时，树苗会非常快乐
-    你的名字叫法维拉
+    复燃的灰烬可以用来生火，而将灰烬掷入火中又可使其复燃
     海里的垃圾无穷无尽
     一日三餐没烦恼，鲸鱼秘制小汉堡，好吃又管饱，实惠又环保，吃了都说好！
-    谁也不知道太古魔像是从哪里来的
     记得拿你的铁匠锤敲一下新鱼竿
     按住“~”键可以连锁砍树
     如有发现BUG请及时上交至GitHub仓库
