稍微削弱连锁采矿

--- a/ET-Mariphilia/minecraft/config/oreexcavation.cfg
+++ b/ET-Mariphilia/minecraft/config/oreexcavation.cfg
@@ -15,10 +15,11 @@ general {
 
     # Blocks blacklisted from being excavated [default: ]
     S:"Block Blacklist" <
+        "ore:sand"
      >
 
     # Amount of exaustion per block excavated [range: 0.0 ~ 3.4028235E38, default: 0.1]
-    S:Exaustion=0.1
+    S:Exaustion=0.2
 
     # Experience cost per block excavated [range: 0 ~ 2147483647, default: 0]
     I:Experience=0
@@ -36,7 +37,7 @@ general {
     B:"Invert Tool Blacklist"=false
 
     # The maximum number of blocks that can be excavated at once [range: 1 ~ 2147483647, default: 128]
-    I:Limit=128
+    I:Limit=32
 
     # How many excavations should be kept in undo history (may lead to exploits or instability) [range: 0 ~ 2147483647, default: 3]
     I:"Max Undos"=3
@@ -54,7 +55,7 @@ general {
     B:"Open Hand"=true
 
     # How far from the origin an excavation can travel [range: 1 ~ 2147483647, default: 16]
-    I:Range=16
+    I:Range=12
 
     # The default game stage required to unlock shape mining (requires gamestages to be installed) [default: ]
     S:"Shape Stage"=
